# physical_units

./: Cargo.toml  ReadMe.md  units.schema.json  units.schema.yaml  units.yaml
Doc/: Generera_enhetssträngar.md  Registry.md  Tabeller.md  Unit_system.md  roadmap.md
src/: anglo.rs  blaha.rs  dim_const.rs  dimension_tests.rs  display.rs  error.rs  lib.rs  main.rs  prefixes.rs  primetable_inserts.rs  qua_enum.rs  secondary_inserts.rs  test_tables.rs  unit_const.rs
src/systems/: anglo.rs
